--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="home" class="home text-center">
         <div class="container">
             <h1>Welcome to My Personal Website</h1>
-            <img src="assets/images/my-photo.jpg" alt="My Photo" style="max-width: 200px; border-radius: 50%;">
+            <img src="assets/images/Headimage.jpg" alt="My Photo" style="max-width: 200px; border-radius: 50%;">
             <p>A brief introduction about yourself can go here.</p>
         </div>
     </section>
