--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     </nav>
 
     <!-- Home Section -->
-    <section id="home" class="home text-center">
-        <div class="container">
-            <h1>Welcome to My Personal Website</h1>
-            <img src="assets/images/Headimage.jpg" alt="My Photo" style="max-width: 200px; border-radius: 50%;">
-            <p>A brief introduction about yourself can go here.</p>
+
+    <section id="home" class="home">
+        <div class="overlay">
+            <div class="container text-center">
+                <h1>Valentina Mazzotti</h1>
+                <p>Physics Master student at McGill</p>
+            </div>
         </div>
     </section>
 
@@ -82,8 +84,15 @@
         </div>
     </section>
 
-    <footer id="footer" class="footer text-center">
-        <p>© 2024 My Personal Website. All rights reserved.</p>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <h3>Contact</h3>
+                <p>Email: valentina.mazzotti@mail.mcgill.ca </p>
+                <p>Address: 226, Rutherford Physics Building, McGill</p>
+            </div>
+        </div>
     </footer>
 
     <!-- Scripts -->
